insercion archivos de DG

--- a/politics.html
+++ b/politics.html
@@ -38,8 +38,10 @@
         <header id="top" class="top_navbar">
             <div class="container">
                 <nav class="navbar navbar-expand-lg navbar-light">
-                    <a class="navbar-brand" href="index.html"><img src="images/logo.png" width="50%" height="70%" alt="" /></a>
-                    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
+                    <a class="navbar-brand" href="index.html"><img src="images/logo.png" width="50%" height="70%"
+                            alt="" /></a>
+                    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavDropdown"
+                        aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
                         <span class="navbar-toggler-icon">
                             <i class="fa fa-bars"></i>
                         </span>
@@ -83,12 +85,12 @@
                 <div class="row">
                     <div class="col-md-12">
                         <div class="about-banner-title">
-                            <h2>Inicio de Sesión</h2>
-                            <p>Inicia sesión o regístrate y comienza a comprar.</p>
+                            <h2>Copyright ©</h2>
+                            <p>Todos los derechos reservados. </p>
                             <nav aria-label="breadcrumb">
                                 <ol class="breadcrumb">
                                     <li class="breadcrumb-item active"><a href="index.html">Inicio</a></li>
-                                    <li class="breadcrumb-item" aria-current="page">Sesión</li>
+                                    <li class="breadcrumb-item" aria-current="page">Políticas</li>
                                 </ol>
                             </nav>
                         </div>
@@ -97,47 +99,43 @@
             </div>
         </div>
         <!-- End Banner -->
-        <!-- Content -->
-        <div class="content-part account-page">
+        <!-- Begin Pharmachy Thumb -->
+        <div class="pharmachy-box-gallery">
             <div class="container">
-                <div class="myaccount-form text-left">
-                    <div class="row">
-                        <div class="col-md-6 col-sm-6 col-xs-12">
-                            <form class="account-form-login">
-                                <h2 class="text-left text-capitalize">Login</h2>
-                                <input type="text" name="lname" class="form-control" placeholder="Your name" />
-                                <input type="text" name="lpassword" class="form-control" placeholder="password" />
-                                <label>
-                                    <input name="remember" type="checkbox">
-                                    <a> Remember me</a></label>
-                                <label class="pull-right">
-                                    <input name="forgot pass" type="checkbox">
-                                    <a> Forgot your Password</a></label>
-                                <input type="submit" value="LOGIN" />
-                            </form>
-                        </div>
-                        <div class="col-md-6 col-sm-6 col-xs-12">
-                            <form class="account-form-reg">
-                                <h2 class="text-left text-capitalize">Register</h2>
-                                <input type="text" name="rname" class="form-control required" placeholder="Your name" required="required" />
-                                <span class="asterisk_input"> </span>
-                                <input type="text" name="remail" class="form-control required" placeholder="Your email" required="required" />
-                                <span class="asterisk_input"> </span>
-                                <input type="text" name="rpassword" class="form-control required" placeholder="Password" required="required" />
-                                <span class="asterisk_input"> </span>
-                                <input type="text" name="rppassword" class="form-control required" placeholder="Repeat Password" required="required" />
-                                <span class="asterisk_input"> </span>
-                                <label>
-                                    <input name="radio" type="radio" value="" />
-                                    <span> Privacy Policy Agreement?</span></label>
-                                <input type="submit" value="SUBMIT" />
-                            </form>
-                        </div>
-                    </div>
+                <!-- Begin About Planex Pharmacy -->
+                <div class="about-planex-pharmacy">
+                    <h2>Derechos de autor</h2>
+                    <p style="text-align: justify">Todos los contenidos de este Sitio (Incluyendo, pero no
+                        limitado a, texto, logotipos, contenido, fotografías, audio, botones, nombres
+                        comerciales y vídeo) están sujetos a derechos de propiedad por las leyes de Derechos de
+                        Autor y demás Leyes relativas Internacionales Medi-Web y de terceros titulares de los
+                        mismos que han autorizado debidamente su inclusión.
+                        <br><br>
+                        En ningún caso se entenderá que se concede licencia alguna o se efectúa renuncia,
+                        transmisión, cesión total o parcial de dichos derechos ni se confiere ningún derecho, y
+                        en especial, de alteración, explotación, reproducción, distribución o comunicación
+                        publica sobre dichos contenido sin la previa autorización expresa de Medi-Web o de los
+                        titulares correspondientes.
+                        <br><br>
+                        El uso de imágenes, fragmentos de videos y demás material que sea objeto de protección
+                        de los derechos de autor, será exclusivamente para fines educativos e informativos, y
+                        cualquier uso distinto como el lucro, reproducción, edición o modificación, será
+                        perseguido y sancionado por el respectivo titular de los Derechos de Autor.
+                    </p>
+                    <h2>Derechos de uso</h2>
+                    <p style="text-align: justify">
+                        Queda prohibido copiar, reproducir, distribuir, publicar, transmitir, difundir, o en
+                        cualquier modo explotar cualquier parte de este servicio sin la autorización previa por
+                        escrito de Androidphoria o de los titulares correspondientes. Sin embargo, usted podrá
+                        bajar material a su computadora personal para uso exclusivamente personal o educacional
+                        y no comercial limitado a una copia por página. Usted no podrá remover o alterar de la
+                        copia ninguna leyenda de Derechos de Autor o la que manifieste la autoría del material.
+                    </p>
                 </div>
+                <!-- End About Planex Pharmacy -->
             </div>
         </div>
-        <!-- /Content -->
+        <!-- End Pharmachy Thumb -->
         <!-- Begin Newsletter -->
         <div class="newsletter-bg">
             <div class="container">
@@ -185,8 +183,10 @@
                                     </div>
                                     <div class="col-form-box">
                                         <div class="input-group mb-2">
-                                            <div class="input-group-addon"><img class="message-img" src="images/message-icon.png" alt="" /></div>
-                                            <textarea class="form-control" id="message" placeholder="Mensaje"></textarea>
+                                            <div class="input-group-addon"><img class="message-img"
+                                                    src="images/message-icon.png" alt="" /></div>
+                                            <textarea class="form-control" id="message"
+                                                placeholder="Mensaje"></textarea>
                                         </div>
                                     </div>
                                     <div class="col-form-box">
@@ -222,8 +222,7 @@
                                     <li><a href="login.html">Mi Cuenta</a></li>
                                     <li><a href="terms.html">Términos y Condiciones</a></li>
                                     <li><a href="priv.html">Política de Privacidad</a></li>
-                                    <li><a href="https://www.google.com.mx/maps/preview" target="_blank">Mapa</a></li>
-                                    </li>
+                                    <li><a href="https://www.google.com.mx/maps/preview" target="_blank">Mapa</a></li>                                    </li>
 
                                 </ul>
                             </div>
@@ -235,11 +234,11 @@
                                 <h2>Contacto</h2>
                             </div>
                             <div class="footer">
-                                <p><span>Dirección :</span>
-                                    <a href="https://www.google.com.mx/maps/place/Universidad+Sim%C3%B3n+Bol%C3%ADvar/@19.371435,-99.1875699,17z/data=!3m1!4b1!4m5!3m4!1s0x85d1ff8630574407:0x714411e707bcbf6d!8m2!3d19.371435!4d-99.1853812"
-                                        target="_blank"><br>Av. Río Mixcoac 48, Insurgentes Mixcoac, Benito Juárez,<br> 03920, Ciudad de México, CDMX.<br>
-                                </p>
-                                </a>
+                                <p><span>Dirección :</span><a
+                                        href="https://www.google.com.mx/maps/place/Universidad+Sim%C3%B3n+Bol%C3%ADvar/@19.371435,-99.1875699,17z/data=!3m1!4b1!4m5!3m4!1s0x85d1ff8630574407:0x714411e707bcbf6d!8m2!3d19.371435!4d-99.1853812"
+                                        target="_blank"><br>Av. Río Mixcoac 48, Insurgentes Mixcoac, Benito Juárez,<br>
+                                        03920, Ciudad de México, CDMX.<br>
+                                </p></a>
                                 <p><span>Teléfono :</span> (55) 5629-9700
                                 </p>
                                 <p><span>Email :</span>
@@ -248,11 +247,12 @@
                             </div>
                             <div class="social-icons">
                                 <ul>
-                                    <li><a href="https://www.facebook.com/USBMexico/?rf=147455588726590" target="_blank"><i class="fa fa-facebook"></i></a></li>
+                                    <li><a href="https://www.facebook.com/USBMexico/?rf=147455588726590"
+                                            target="_blank"><i class="fa fa-facebook"></i></a></li>
                                     <li><a href="https://www.instagram.com/usbmexico/?hl=es-la" target="_blank"><i
-                                            class="fa fa-instagram"></i></a></li>
+                                                class="fa fa-instagram"></i></a></li>
                                     <li><a href="https://twitter.com/usb_mexico" target="_blank"><i
-                                            class="fa fa-twitter"></i></a></li>
+                                                class="fa fa-twitter"></i></a></li>
                                 </ul>
                             </div>
                         </div>
