--- a/priv.html
+++ b/priv.html
@@ -38,8 +38,10 @@
         <header id="top" class="top_navbar">
             <div class="container">
                 <nav class="navbar navbar-expand-lg navbar-light">
-                    <a class="navbar-brand" href="index.html"><img src="images/logo.png" width="50%" height="70%" alt="" /></a>
-                    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
+                    <a class="navbar-brand" href="index.html"><img src="images/logo.png" width="50%" height="70%"
+                            alt="" /></a>
+                    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavDropdown"
+                        aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
                         <span class="navbar-toggler-icon">
                             <i class="fa fa-bars"></i>
                         </span>
@@ -83,12 +85,12 @@
                 <div class="row">
                     <div class="col-md-12">
                         <div class="about-banner-title">
-                            <h2>Inicio de Sesión</h2>
-                            <p>Inicia sesión o regístrate y comienza a comprar.</p>
+                            <h2>Política de Privacidad</h2>
+                            <p>Cuidamos su información.</p>
                             <nav aria-label="breadcrumb">
                                 <ol class="breadcrumb">
                                     <li class="breadcrumb-item active"><a href="index.html">Inicio</a></li>
-                                    <li class="breadcrumb-item" aria-current="page">Sesión</li>
+                                    <li class="breadcrumb-item" aria-current="page">Privacidad</li>
                                 </ol>
                             </nav>
                         </div>
@@ -97,47 +99,86 @@
             </div>
         </div>
         <!-- End Banner -->
-        <!-- Content -->
-        <div class="content-part account-page">
+        <!-- Begin Pharmachy Thumb -->
+        <div class="pharmachy-box-gallery">
             <div class="container">
-                <div class="myaccount-form text-left">
-                    <div class="row">
-                        <div class="col-md-6 col-sm-6 col-xs-12">
-                            <form class="account-form-login">
-                                <h2 class="text-left text-capitalize">Login</h2>
-                                <input type="text" name="lname" class="form-control" placeholder="Your name" />
-                                <input type="text" name="lpassword" class="form-control" placeholder="password" />
-                                <label>
-                                    <input name="remember" type="checkbox">
-                                    <a> Remember me</a></label>
-                                <label class="pull-right">
-                                    <input name="forgot pass" type="checkbox">
-                                    <a> Forgot your Password</a></label>
-                                <input type="submit" value="LOGIN" />
-                            </form>
-                        </div>
-                        <div class="col-md-6 col-sm-6 col-xs-12">
-                            <form class="account-form-reg">
-                                <h2 class="text-left text-capitalize">Register</h2>
-                                <input type="text" name="rname" class="form-control required" placeholder="Your name" required="required" />
-                                <span class="asterisk_input"> </span>
-                                <input type="text" name="remail" class="form-control required" placeholder="Your email" required="required" />
-                                <span class="asterisk_input"> </span>
-                                <input type="text" name="rpassword" class="form-control required" placeholder="Password" required="required" />
-                                <span class="asterisk_input"> </span>
-                                <input type="text" name="rppassword" class="form-control required" placeholder="Repeat Password" required="required" />
-                                <span class="asterisk_input"> </span>
-                                <label>
-                                    <input name="radio" type="radio" value="" />
-                                    <span> Privacy Policy Agreement?</span></label>
-                                <input type="submit" value="SUBMIT" />
-                            </form>
-                        </div>
-                    </div>
+                <!-- Begin About Planex Pharmacy -->
+                <div class="about-planex-pharmacy">
+                    <h2>Política Medi-Web</h2>
+                    <p style="text-align: justify">El presente Política de Privacidad establece los términos en que usa
+                        y protege la información que es proporcionada por sus usuarios al momento de utilizar Medi-Web.
+                        Esta compañía está comprometida con la seguridad de los datos de sus usuarios. Cuando le pedimos
+                        llenar los campos de información personal con la cual usted pueda ser identificado, lo hacemos
+                        asegurando que sólo se empleará de acuerdo con los términos de este documento. Sin embargo esta
+                        Política de Privacidad puede cambiar con el tiempo o ser actualizada por lo que le recomendamos
+                        y enfatizamos revisar continuamente esta página para asegurarse que está de acuerdo con dichos
+                        cambios.
+                    </p>
+                    <h2>Información que es recogida</h2>
+                    <p style="text-align: justify">
+                        Medi-Web podrá recoger información personal por ejemplo: Nombre, información de contacto como su
+                        dirección de correo electrónica e información demográfica. Así mismo cuando sea necesario podrá
+                        ser requerida información específica para procesar algún pedido o realizar una entrega o
+                        facturación.
+                    </p>
+                    <h2>Uso de la información recogida</h2>
+                    <p style="text-align: justify">Medi-Web emplea la información con el fin de proporcionar el mejor
+                        servicio posible, particularmente para mantener un registro de usuarios, de pedidos en caso que
+                        aplique, y mejorar nuestros productos y servicios. Es posible que sean enviados correos
+                        electrónicos periódicamente a través de nuestro sitio con ofertas especiales, nuevos productos y
+                        otra información publicitaria que consideremos relevante para usted o que pueda brindarle algún
+                        beneficio, estos correos electrónicos serán enviados a la dirección que usted proporcione y
+                        podrán ser cancelados en cualquier momento.
+                        <br><br>
+                        Medi-Web está altamente comprometido para cumplir con el compromiso de mantener su información
+                        segura. Usamos los sistemas más avanzados y los actualizamos constantemente para asegurarnos que
+                        no exista ningún acceso no autorizado.
+                    </p>
+                    <h2>Cookies</h2>
+                    <p style="text-align: justify">
+                        Una cookie se refiere a un fichero que es enviado con la finalidad de solicitar permiso para
+                        almacenarse en su ordenador, al aceptar dicho fichero se crea y la cookie sirve entonces para
+                        tener información respecto al tráfico web, y también facilita las futuras visitas a una web
+                        recurrente. Otra función que tienen las cookies es que con ellas las web pueden reconocerte
+                        individualmente y por tanto brindarte el mejor servicio personalizado de su web.
+                        <br><br>
+                        Medi-Web emplea las cookies para poder identificar las páginas que son visitadas y su
+                        frecuencia. Esta información es empleada únicamente para análisis estadístico y después la
+                        información se elimina de forma permanente. Usted puede eliminar las cookies en cualquier
+                        momento desde su ordenador. Sin embargo las cookies ayudan a proporcionar un mejor servicio de
+                        los sitios web, estás no dan acceso a información de su ordenador ni de usted, a menos de que
+                        usted así lo quiera y la proporcione directamente. Usted puede aceptar o negar el uso de
+                        cookies, sin embargo la mayoría de navegadores aceptan cookies automáticamente pues sirve para
+                        tener un mejor servicio web. También usted puede cambiar la configuración de su ordenador para
+                        declinar las cookies. Si se declinan es posible que no pueda utilizar algunos de nuestros
+                        servicios.
+                    </p>
+                    <h2>Enlaces a Terceros</h2>
+                    <p style="text-align: justify">Medi-Web pudiera contener en laces a otros sitios que pudieran ser de
+                        su interés. Una vez que usted de clic en estos enlaces y abandone nuestra página, ya no tenemos
+                        control sobre al sitio al que es redirigido y por lo tanto no somos responsables de los términos
+                        o privacidad ni de la protección de sus datos en esos otros sitios terceros. Dichos sitios están
+                        sujetos a sus propias políticas de privacidad por lo cual es recomendable que los consulte para
+                        confirmar que usted está de acuerdo con estas.
+                    </p>
+                    <h2>Control de su información personal</h2>
+                    <p style="text-align: justify">En cualquier momento usted puede restringir la recopilación o el uso
+                        de la información personal que es proporcionada a Medi-Web. Cada vez que se le solicite rellenar
+                        un formulario, como el de alta de usuario, puede marcar o desmarcar la opción de recibir
+                        información por correo electrónico. En caso de que haya marcado la opción de recibir nuestro
+                        boletín o publicidad usted puede cancelarla en cualquier momento.
+                        <br><br>
+                        Esta compañía no venderá, cederá ni distribuirá la información personal que es recopilada sin su
+                        consentimiento, salvo que sea requerido por un juez con un orden judicial.
+                        <br><br>
+                        Se reserva el derecho de cambiar los términos de la presente Política de Privacidad en cualquier
+                        momento.
+                    </p>
                 </div>
+                <!-- End About Planex Pharmacy -->
             </div>
         </div>
-        <!-- /Content -->
+        <!-- End Pharmachy Thumb -->
         <!-- Begin Newsletter -->
         <div class="newsletter-bg">
             <div class="container">
@@ -185,8 +226,10 @@
                                     </div>
                                     <div class="col-form-box">
                                         <div class="input-group mb-2">
-                                            <div class="input-group-addon"><img class="message-img" src="images/message-icon.png" alt="" /></div>
-                                            <textarea class="form-control" id="message" placeholder="Mensaje"></textarea>
+                                            <div class="input-group-addon"><img class="message-img"
+                                                    src="images/message-icon.png" alt="" /></div>
+                                            <textarea class="form-control" id="message"
+                                                placeholder="Mensaje"></textarea>
                                         </div>
                                     </div>
                                     <div class="col-form-box">
@@ -235,11 +278,11 @@
                                 <h2>Contacto</h2>
                             </div>
                             <div class="footer">
-                                <p><span>Dirección :</span>
-                                    <a href="https://www.google.com.mx/maps/place/Universidad+Sim%C3%B3n+Bol%C3%ADvar/@19.371435,-99.1875699,17z/data=!3m1!4b1!4m5!3m4!1s0x85d1ff8630574407:0x714411e707bcbf6d!8m2!3d19.371435!4d-99.1853812"
-                                        target="_blank"><br>Av. Río Mixcoac 48, Insurgentes Mixcoac, Benito Juárez,<br> 03920, Ciudad de México, CDMX.<br>
-                                </p>
-                                </a>
+                                <p><span>Dirección :</span><a
+                                        href="https://www.google.com.mx/maps/place/Universidad+Sim%C3%B3n+Bol%C3%ADvar/@19.371435,-99.1875699,17z/data=!3m1!4b1!4m5!3m4!1s0x85d1ff8630574407:0x714411e707bcbf6d!8m2!3d19.371435!4d-99.1853812"
+                                        target="_blank"><br>Av. Río Mixcoac 48, Insurgentes Mixcoac, Benito Juárez,<br>
+                                        03920, Ciudad de México, CDMX.<br>
+                                </p></a>
                                 <p><span>Teléfono :</span> (55) 5629-9700
                                 </p>
                                 <p><span>Email :</span>
@@ -248,11 +291,12 @@
                             </div>
                             <div class="social-icons">
                                 <ul>
-                                    <li><a href="https://www.facebook.com/USBMexico/?rf=147455588726590" target="_blank"><i class="fa fa-facebook"></i></a></li>
+                                    <li><a href="https://www.facebook.com/USBMexico/?rf=147455588726590"
+                                            target="_blank"><i class="fa fa-facebook"></i></a></li>
                                     <li><a href="https://www.instagram.com/usbmexico/?hl=es-la" target="_blank"><i
-                                            class="fa fa-instagram"></i></a></li>
+                                                class="fa fa-instagram"></i></a></li>
                                     <li><a href="https://twitter.com/usb_mexico" target="_blank"><i
-                                            class="fa fa-twitter"></i></a></li>
+                                                class="fa fa-twitter"></i></a></li>
                                 </ul>
                             </div>
                         </div>
