--- a/contact.html
+++ b/contact.html
@@ -5,7 +5,7 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
-    <title>Planex Pharmacy</title>
+    <title>Medi-Web</title>
     <link rel="icon" type="image/png" href="images/favicon.png" sizes="16x16">
 
     <!-- Bootstrap CSS -->
@@ -47,17 +47,12 @@
                     <div class="collapse navbar-collapse justify-content-end" id="navbarNavDropdown">
                         <ul class="navbar-nav">
                             <li class="nav-item">
-                                <a class="nav-link" href="index.html">Inicio <span class="sr-only">(current)</span></a>
+                                <a class="nav-link" href="index.html">Inicio<span class="sr-only">(current)</span></a>
                             </li>
-                            <li class="nav-item dropdown">
-                                <a class="nav-link dropdown" href="#" id="navbardrop" data-toggle="dropdown">Categorias</a>
-                                <div class="dropdown-menu">
-                                    <a class="dropdown-item" href="treatments.html">Productos 1</a>
-                                    <a class="dropdown-item" href="#">Productos 2</a>
-                                    <a class="dropdown-item" href="#">Productos 3</a>
-                                </div>
+                            <li class="nav-item">
+                                <a class="nav-link" href="treatments.html">Productos</a>
                             </li>
-                            <li class="nav-item active">
+                            <li class="nav-item">
                                 <a class="nav-link" href="contact.html">Contacto</a>
                             </li>
                             <li class="nav-item">
@@ -89,7 +84,7 @@
                     <div class="col-md-12">
                         <div class="about-banner-title">
                             <h2>Contacto</h2>
-                            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
+                            <p>Comunícate con nosotros.</p>
                             <nav aria-label="breadcrumb">
                                 <ol class="breadcrumb">
                                     <li class="breadcrumb-item active"><a href="index.html">Inicio</a></li>
@@ -110,18 +105,18 @@
                         <div class="contact-form">
                             <form>
                                 <div class="form-group">
-                                    <input type="text" class="form-control" placeholder="Name">
+                                    <input type="text" class="form-control" placeholder="Nombre">
                                 </div>
                                 <div class="form-group">
                                     <input type="email" class="form-control" id="email3" placeholder="Email">
                                 </div>
                                 <div class="form-group">
-                                    <input type="text" class="form-control" id="phone" placeholder="Phone">
+                                    <input type="text" class="form-control" id="phone" placeholder="Teléfono">
                                 </div>
                                 <div class="form-group">
-                                    <textarea class="form-control" id="textarea" placeholder="Message"></textarea>
+                                    <textarea class="form-control" id="textarea" placeholder="Mensaje"></textarea>
                                 </div>
-                                <button type="submit" class="btn btn-primary submit-btn">Submit</button>
+                                <button type="submit" class="btn btn-primary submit-btn">Enviar</button>
                             </form>
                         </div>
                     </div>
@@ -130,19 +125,21 @@
                             <div class="col-md-4 col-lg-4">
                                 <div class="contact-icon-box">
                                     <i class="fa fa-map-marker"></i>
-                                    <p>Proin gravida nibh vel velit, <br> 123 Lorem Ipsum</p>
+                                    <p>
+                                        <a href="https://www.google.com.mx/maps/place/Universidad+Sim%C3%B3n+Bol%C3%ADvar/@19.371435,-99.1875699,17z/data=!3m1!4b1!4m5!3m4!1s0x85d1ff8630574407:0x714411e707bcbf6d!8m2!3d19.371435!4d-99.1853812" target="_blank"><br>Av. Río Mixcoac 48, Insurgentes Mixcoac, Benito Juárez, 03920, Ciudad de México, CDMX.</a>
+                                    </p>
                                 </div>
                             </div>
                             <div class="col-md-4 col-lg-4">
                                 <div class="contact-icon-box">
                                     <i class="fa fa-envelope"></i>
-                                    <p><a href="mailto:info@planexpharmacy.com">Info@planexpharmacy.com</a></p>
+                                    <p><a href="mailto:ventas@mediweb.com">ventas@mediweb.com</a></p>
                                 </div>
                             </div>
                             <div class="col-md-4 col-lg-4">
                                 <div class="contact-icon-box">
                                     <i class="fa fa-phone"></i>
-                                    <p>012 345 6789</p>
+                                    <p>(55) 5629-9700</p>
                                 </div>
                             </div>
                         </div>
@@ -150,7 +147,7 @@
                             <div class="col-md-12 col-lg-12">
                                 <div class="map">
                                     <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d481728.8046506293!2d-99.42382104334501!3d19.390519015859844!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x85ce0026db097507%3A0x54061076265ee841!2sCiudad%20de%20M%C3%A9xico%2C%20CDMX!5e0!3m2!1ses!2smx!4v1603566461847!5m2!1ses!2smx"
-                                        width="600" height="450" frameborder="0" style="border:0;" allowfullscreen="" aria-hidden="false" tabindex="0"></iframe> height="353" style="border:0" allowfullscreen>
+                                        width="600" height="450" frameborder="0" style="border:0;" allowfullscreen="" aria-hidden="false" tabindex="0">
                                     </iframe>
                                 </div>
                             </div>
@@ -166,15 +163,15 @@
                 <div class="row">
                     <div class="col-md-7">
                         <div class="newsletter">
-                            <h2>Subscribe to our newsletter and stay updated on the latest news.</h2>
+                            <h2>Suscríbete a nuestro newsletter y recibe ofertas cada semana.</h2>
                         </div>
                     </div>
                     <div class="col-md-5">
                         <div class="newsletter-form-box">
                             <form>
                                 <div class="form-group">
-                                    <input type="email" class="form-control" id="Email" placeholder="Email Address">
-                                    <button type="submit" class="btn btn-primary">Submit</button>
+                                    <input type="email" class="form-control" id="Email" placeholder="Email">
+                                    <button type="submit" class="btn btn-primary">Enviar</button>
                                 </div>
                             </form>
                         </div>
@@ -195,7 +192,7 @@
                                         <div class="input-group mb-2">
                                             <div class="input-group-addon"><img src="images/user-icon.png" alt="" />
                                             </div>
-                                            <input type="text" class="form-control" placeholder="Name">
+                                            <input type="text" class="form-control" id="name" placeholder="Nombre">
                                         </div>
                                     </div>
                                     <div class="col-form-box">
@@ -208,11 +205,11 @@
                                     <div class="col-form-box">
                                         <div class="input-group mb-2">
                                             <div class="input-group-addon"><img class="message-img" src="images/message-icon.png" alt="" /></div>
-                                            <textarea class="form-control" id="message" placeholder="Message"></textarea>
+                                            <textarea class="form-control" id="message" placeholder="Mensaje"></textarea>
                                         </div>
                                     </div>
                                     <div class="col-form-box">
-                                        <button type="submit" class="btn btn-block btn-send">Send</button>
+                                        <button type="submit" class="btn btn-block btn-send">Enviar</button>
                                     </div>
                                 </div>
                             </form>
@@ -221,17 +218,15 @@
                     <div class="col-sm-6 col-md-6 col-lg-2 col-xl-3">
                         <div class="single-widget single-widget-margin-top">
                             <div class="widget-title">
-                                <h2>Site Links</h2>
+                                <h2>Enlaces del Sitio</h2>
                             </div>
                             <div class="footer">
                                 <ul>
-                                    <li><a href="index.html">Home</a></li>
-                                    <li><a href="treatments.html">Treatments</a></li>
-                                    <li><a href="about-us.html">About Us</a></li>
+                                    <li><a href="index.html">Inicio</a></li>
+                                    <li><a href="treatments.html">Productos</a></li>
+                                    <li><a href="about-us.html">Nosotros</a></li>
                                     <li><a href="faq.html">FAQ</a></li>
-                                    <li><a href="reviews.html">Reviews</a></li>
-                                    <li><a href="blog.html">Blog</a></li>
-                                    <li><a href="contact.html">Contact</a></li>
+                                    <li><a href="contact.html">Contacto</a></li>
                                 </ul>
                             </div>
                         </div>
@@ -239,16 +234,16 @@
                     <div class="col-sm-6 col-md-6 col-lg-3 col-xl-3">
                         <div class="single-widget">
                             <div class="widget-title">
-                                <h2>Quick Links</h2>
+                                <h2>Enlaces Rápidos</h2>
                             </div>
                             <div class="footer">
                                 <ul>
-                                    <li><a href="javascript:;">My Account</a></li>
-                                    <li><a href="javascript:;">Pricing</a></li>
-                                    <li><a href="javascript:;">Delivery</a></li>
-                                    <li><a href="javascript:;">Terms and Conditions</a></li>
-                                    <li><a href="javascript:;">Privacy Policy</a></li>
-                                    <li><a href="javascript:;">Site map</a></li>
+                                    <li><a href="login.html">Mi Cuenta</a></li>
+                                    <li><a href="terms.html">Términos y Condiciones</a></li>
+                                    <li><a href="priv.html">Política de Privacidad</a></li>
+                                    <li><a href="https://www.google.com.mx/maps/preview" target="_blank">Mapa</a></li>
+                                    </li>
+
                                 </ul>
                             </div>
                         </div>
@@ -256,23 +251,27 @@
                     <div class="col-sm-6 col-md-6 col-lg-4 col-xl-3">
                         <div class="single-widget">
                             <div class="widget-title">
-                                <h2>Contact</h2>
+                                <h2>Contacto</h2>
                             </div>
                             <div class="footer">
-                                <p><span>Address :</span><br> 17 Lorem Road,<br> Lorem ipusm, USA, W51CT <br><br>
+                                <p><span>Dirección :</span>
+                                    <a href="https://www.google.com.mx/maps/place/Universidad+Sim%C3%B3n+Bol%C3%ADvar/@19.371435,-99.1875699,17z/data=!3m1!4b1!4m5!3m4!1s0x85d1ff8630574407:0x714411e707bcbf6d!8m2!3d19.371435!4d-99.1853812"
+                                        target="_blank"><br>Av. Río Mixcoac 48, Insurgentes Mixcoac, Benito Juárez,<br> 03920, Ciudad de México, CDMX.<br>
                                 </p>
-                                <p><span>Phone :</span> 0123 4567890
+                                </a>
+                                <p><span>Teléfono :</span> (55) 5629-9700
                                 </p>
                                 <p><span>Email :</span>
-                                    <a href="mailto:info@planexpharmacy.com">info@planexpharmacy.com</a>
+                                    <a href="mailto:ventas@mediweb.com">ventas@mediweb.com</a>
                                 </p>
                             </div>
                             <div class="social-icons">
                                 <ul>
-                                    <li><a href="javascript:;"><i class="fa fa-facebook"></i></a></li>
-                                    <li><a href="javascript:;"><i class="fa fa-google-plus"></i></a></li>
-                                    <li><a href="javascript:;"><i class="fa fa-linkedin"></i></a></li>
-                                    <li><a href="javascript:;"><i class="fa fa-twitter"></i></a></li>
+                                    <li><a href="https://www.facebook.com/USBMexico/?rf=147455588726590" target="_blank"><i class="fa fa-facebook"></i></a></li>
+                                    <li><a href="https://www.instagram.com/usbmexico/?hl=es-la" target="_blank"><i
+                                                class="fa fa-instagram"></i></a></li>
+                                    <li><a href="https://twitter.com/usb_mexico" target="_blank"><i
+                                                class="fa fa-twitter"></i></a></li>
                                 </ul>
                             </div>
                         </div>
@@ -280,7 +279,7 @@
                 </div>
             </div>
             <div class="copyright">
-                <p>Copyright &#169; 2018 <a href="javascript:;">Planex Pharmacy</a>. All Rights Reserved.</p>
+                <p>Copyright &#169; 2020 <a href="politics.html">Medi-Web</a>. Todos los Derechos Reservados.</p>
             </div>
         </div>
         <!-- End Footer Wrapper -->
