--- a/faq.html
+++ b/faq.html
@@ -46,12 +46,11 @@
                     </button>
                     <div class="collapse navbar-collapse justify-content-end" id="navbarNavDropdown">
                         <ul class="navbar-nav">
-                            <a class="nav-link dropdown" href="#" id="navbardrop" data-toggle="dropdown">Categorias</a>
-                            <div class="dropdown-menu">
-                                <a class="dropdown-item nav-item" href="treatments.html">Productos 1</a>
-                                <a class="dropdown-item" href="#">Productos 2</a>
-                                <a class="dropdown-item" href="#">Productos 3</a>
-                            </div>
+                            <li class="nav-item">
+                                <a class="nav-link" href="index.html">Inicio<span class="sr-only">(current)</span></a>
+                            </li>
+                            <li class="nav-item">
+                                <a class="nav-link" href="treatments.html">Productos</a>
                             </li>
                             <li class="nav-item">
                                 <a class="nav-link" href="contact.html">Contacto</a>
@@ -59,7 +58,7 @@
                             <li class="nav-item">
                                 <a class="nav-link" href="about-us.html">Nosotros</a>
                             </li>
-                            <li class="nav-item active">
+                            <li class="nav-item">
                                 <a class="nav-link" href="faq.html">FAQ</a>
                             </li>
                         </ul>
@@ -329,11 +328,12 @@
                             </div>
                             <div class="footer">
                                 <ul>
-                                    <li><a href="javascript:;">Mi Cuenta</a></li>
-                                    <li><a href="javascript:;">Términos y Condiciones</a></li>
-                                    <li><a href="javascript:;">Política de Privacidad</a></li>
-                                    <li><a href="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d481728.8046506293!2d-99.42382104334501!3d19.390519015859844!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x85ce0026db097507%3A0x54061076265ee841!2sCiudad%20de%20M%C3%A9xico%2C%20CDMX!5e0!3m2!1ses!2smx!4v1603566461847!5m2!1ses!2smx;">Mapa</a>
+                                    <li><a href="login.html">Mi Cuenta</a></li>
+                                    <li><a href="terms.html">Términos y Condiciones</a></li>
+                                    <li><a href="priv.html">Política de Privacidad</a></li>
+                                    <li><a href="https://www.google.com.mx/maps/preview" target="_blank">Mapa</a></li>
                                     </li>
+
                                 </ul>
                             </div>
                         </div>
@@ -345,7 +345,8 @@
                             </div>
                             <div class="footer">
                                 <p><span>Dirección :</span>
-                                    <a href="https://www.google.com.mx/maps/place/Universidad+Sim%C3%B3n+Bol%C3%ADvar/@19.371435,-99.1875699,17z/data=!3m1!4b1!4m5!3m4!1s0x85d1ff8630574407:0x714411e707bcbf6d!8m2!3d19.371435!4d-99.1853812" target="_blank"><br>Av. Río Mixcoac 48, Insurgentes Mixcoac, Benito Juárez,<br> 03920, Ciudad de México, CDMX.<br>
+                                    <a href="https://www.google.com.mx/maps/place/Universidad+Sim%C3%B3n+Bol%C3%ADvar/@19.371435,-99.1875699,17z/data=!3m1!4b1!4m5!3m4!1s0x85d1ff8630574407:0x714411e707bcbf6d!8m2!3d19.371435!4d-99.1853812"
+                                        target="_blank"><br>Av. Río Mixcoac 48, Insurgentes Mixcoac, Benito Juárez,<br> 03920, Ciudad de México, CDMX.<br>
                                 </p>
                                 </a>
                                 <p><span>Teléfono :</span> (55) 5629-9700
@@ -376,7 +377,7 @@
     <!-- End wrapper -->
 
     <!-- jquery latest version -->
-    <script src="js/jquery-3.5.1.min.js"></script>
+    <script src="js/jquery.min.js"></script>
 
     <!-- popper.min js -->
     <script src="js/popper.min.js"></script>
